--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   open_file: ^3.2.1
   printing: ^5.7.4
   flutter_local_notifications: ^9.4.0
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
