--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_local_notifications: ^9.4.0
   flutter_rating_bar: ^4.0.0
   permission_handler: ^9.2.0
+  connectivity_plus: ^2.3.0
 
 dev_dependencies:
   flutter_test:
