User Realtime Changed Accoumplished by adding provider listen =true

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.14.0 <3.0.0"
+  sdk: ">=2.16.2 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,9 +41,9 @@ dependencies:
   firebase_storage: ^10.2.8
   firebase_database: ^9.0.7
   firebase_auth: ^3.3.8
-  google_fonts: ^2.1.0
-  flutter_svg: ^0.22.0
-  fl_chart: ^0.36.1
+  google_fonts: ^3.0.1
+  flutter_svg: ^1.0.3
+  fl_chart: ^0.51.0
   flutter_speed_dial: ^6.0.0
   image_picker: ^0.8.4+4
   provider: ^6.0.2
@@ -57,6 +57,7 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   permission_handler: ^9.2.0
   connectivity_plus: ^2.3.0
+  syncfusion_flutter_datagrid: ^20.1.58
 
 dev_dependencies:
   flutter_test:
